Implement broadcasting data from AHT10
- add sensor driver
- implement queue between processes

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,5 @@
-idf_component_register(SRCS "demo-smart-device.c"
+idf_component_register(SRCS
+                    "demo-smart-device.c"
+                    "aht10.c"
                     INCLUDE_DIRS "."
                     REQUIRES mocto-smart-device)
